--- a/conf/app.conf
+++ b/conf/app.conf
@@ -256,3 +256,8 @@ log.error.flags = 3
 # Example:
 #   log.request.output = %(app.name)s-request.log
 log.request.output = off
+
+
+# Database Information
+db.user = "root"
+db.name = "go_wiki_revel"
